--- a/assignment.html
+++ b/assignment.html
@@ -36,11 +36,11 @@
           <label for="Degree"><b>Degree</b></label>
           <input type="text" placeholder="Enter Degree" id="Degree" required>
       
-          <button type="submit" class="btn" onclick="getdata()">Add Data</button>
+          <button type="submit" class="btn" onclick="getdata()">Save</button>
           
         </div>
       </div>
 
-    <button type="submit" onClick="formdata()" id="addbtn" >Add</button>
+    <button type="submit" onClick="formdata()" id="addbtn" >Add User</button>
 </body>
 </html>
